--- a/index.html
+++ b/index.html
@@ -25,3 +25,11 @@
 
 </body>
 </html>
+<div style="margin-top: 20px; text-align: left;">
+    <label style="font-weight: bold; color: #333;">Aapka Naam:</label><br>
+    <input type="text" placeholder="Apna naam likhein..." style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 5px; border: 1px solid #ccc;"><br><br>
+
+    <label style="font-weight: bold; color: #333;">Aapko Varanasi kaisa laga?</label><br>
+    <textarea placeholder="Apna feedback dein..." style="width: 100%; padding: 10px; margin-top: 5px; border-radius: 5px; border: 1px solid #ccc; height: 80px;"></textarea>
+</div>
+
