Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <h1 style="color: teal;">BANARAS BLOG</h1>
   <p>Meri yatra ki kahani...</p>
   
-  <img src="apki_photo.jpg" width="200">
+  <White Simple Light Blogger Bio Link Website_20260102_120818_0000.png>
 
   <br> <button style="background: orange; color: white;">Read More</button>
 </center>
